--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,17 @@
     <string name="tv_win_dialog">It took you %1$s moves, would you like to restart the game?</string>
     <string name="score">score</string>
     <string name="best">best</string>
-    <string name="start_game">Start Game</string>
+    <string name="start_game">START GAME</string>
     <string name="restart">Restart</string>
     <string name="play">Play</string>
-    <string name="game_over">GAME OVER!</string>
-    <string name="rate_game">Rate Game</string>
-    <string name="share_game">Share Game</string>
-    <string name="about_game">About Game</string>
+    <string name="game_over">game over!</string>
+    <string name="rate_game">Rate this Game</string>
     <string name="share_app_text">\"Hey! 🌟 Found this Game that\'s been helping to sharping mind.– check it out!\nhttps://play.google.com/store/apps/details?id=%1$s</string>
     <string name="play_store_link">"https://play.google.com/store/apps/details?id=%1$s"</string>
+    <string name="privacy_policy_link">"https://sites.google.com/view/2048--game-privacy-policy/"</string>
     <string name="exit_dialog_desc">"Are you sure you want to leave the game? Don't worry your game will be saved."</string>
-    <string name="exit_dialog_title">"LEAVE THE GAME?"</string>
-    <string name="restart_dialog_title">"RESTART GAME?"</string>
+    <string name="exit_dialog_title">"leave game?"</string>
+    <string name="restart_dialog_title">"restart game?"</string>
     <string name="restart_dialog_desc">"Are you sure you want to Restart the game? Your progress will be lost."</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
@@ -28,8 +27,16 @@
     <string name="pink_monochrome">PINK MONOCHROME</string>
     <string name="border_blue_ocean">BLUE OCEAN</string>
     <string name="bubble_theme">BUBBLES</string>
-    <string name="set_theme">Set Theme</string>
-    <string name="theme">Themes</string>
-    <string name="setting">Settings</string>
+    <string name="set_theme">SET THEME</string>
+    <string name="setting">settings</string>
     <string name="moves">Moves :</string>
+    <string name="select_theme">selected theme</string>
+    <string name="app_info">app information</string>
+    <string name="share_game_app">Share 2048++ Game</string>
+    <string name="share_app_desc">Share app with your friends and family</string>
+    <string name="privacy_policy_text">Privacy Policy</string>
+    <string name="privacy_policy_desc">"Read this game's privacy policy "</string>
+    <string name="version_number">Version Number</string>
+    <string name="rate_game_desc">Rate game on play store</string>
+    <string name="theme">theme</string>
 </resources>
